...
                    Text(comment.patient?.user.firstName ?? "")
                    Text(comment.patient?.user.lastName ?? "")
                }
                
                Section(header: Text("Avis médical")) {
                    HStack {
                        Text("Titre")
                        Spacer()
                        Text(comment.title)
                    }
                    HStack {
                        Text("Rédigé le")
                        Spacer()
                        Text(formattedDate(comment.createAt))
                    }
                    HStack {
                        Text("Commentaire")
                        Spacer()
                        Text(comment.content)
                    }
                }
            }
            
...
