...
    private func updatePrescription() {
        
        if let id = prescription.id {
            patientVM.updatePrescription(date: NewDate(id: id, date: endDate) ){ result in
                switch result {
                case .success(let message):
                    self.titleAlert = "Prescription modifiée 👍"
                    self.messageAlert = message
                    self.showAlert = true
                    // Rechargement des données
                    patientVM.loadData()
                case .failure(let error):
                    self.titleAlert = "Echec de modification 👎"
...
